Update picture of aboutus.html

--- a/app/templates/aboutus.html
+++ b/app/templates/aboutus.html
@@ -18,7 +18,7 @@
           <p>Our website provides a user-friendly platform for creating, sharing, and responding to surveys. Whether you’re an individual seeking opinions, a researcher conducting a study, or a business collecting customer feedback, our tools make it easy to design and distribute surveys and collect responses efficiently. We enable users to gather meaningful data, understand trends, and make informed decisions through impactful surveys.</p>
         </div>
         <div class="col-lg-6">
-          <img src="https://via.placeholder.com/600x400" alt="Buildings" class="img-fluid">
+          <img src="https://res.cloudinary.com/dynbwiv3t/image/upload/v1715938695/marvin-meyer-SYTO3xs06fU-unsplash_ar6edo.jpg" alt="Buildings" class="img-fluid">
         </div>
       </div>
     </div>
@@ -29,7 +29,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-6">
-          <img src="https://via.placeholder.com/600x400" alt="Analytics" class="img-fluid">
+          <img src="https://res.cloudinary.com/dynbwiv3t/image/upload/v1715938711/firmbee-com-jrh5lAq-mIs-unsplash_n4ojby.jpg" alt="Analytics" class="img-fluid">
         </div>
         <div class="col-lg-6">
           <h2 class="goal-text">Why We Do It</h2>
@@ -48,7 +48,7 @@
             <p>We value collaboration, knowledge-sharing, and user empowerment. Our platform fosters a dynamic community where users can contribute to and benefit from a wealth of diverse perspectives. By participating in surveys, users help build a robust knowledge base that supports continuous learning and growth. We are committed to providing reliable tools and resources that enable users to make informed decisions and drive positive outcomes in both personal and professional spheres.</p>
           </div>
           <div class="col-lg-6">
-            <img src="https://via.placeholder.com/600x400" alt="Buildings" class="img-fluid">
+            <img src="https://res.cloudinary.com/dynbwiv3t/image/upload/v1714477459/declan-sun-vJF-hGYyFho-unsplash_ajcars.jpg" alt="Buildings" class="img-fluid">
           </div>
         </div>
       </div>
@@ -59,7 +59,7 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-6">
-            <img src="https://via.placeholder.com/600x400" alt="Analytics" class="img-fluid">
+            <img src="https://res.cloudinary.com/dynbwiv3t/image/upload/v1714477445/christina-wocintechchat-com-03hBSIiFikE-unsplash_gmg2ha.jpg" alt="Analytics" class="img-fluid">
           </div>
           <div class="col-lg-6">
             <h2 class="goal-text">Contact Us</h2>
