Implemented BluePrint main into entire object

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,3 @@
-
-
 {% extends 'navbar/navbar.html' %}
 
 {% set exclude_bootstrap = True %}
@@ -24,7 +22,7 @@
         <h2>Survey Stream <br>Survey the World</h2>
         <p>Shape the Future with Every Survey</p>
         <div class="tutorial-link">
-          <a href="{{url_for('register')}}" rel="noopener noreferer">
+          <a href="{{url_for('main.register')}}" rel="noopener noreferer">
             Start For Free<i class="bi bi-arrow-right-circle-fill"></i>
           </a>
         </div>
