--- a/app/templates/user/login.html
+++ b/app/templates/user/login.html
@@ -40,8 +40,8 @@
                 {{ form.submit(class="btn btn-primary btn-lg btn-block") }}
             </div>
             <div class="mb-3">
-                <a href="{{ url_for('register') }}">Sign Up</a><br>
-                <a href="{{ url_for('reset_password') }}">Forget Password?</a>
+                <a href="{{ url_for('main.register') }}">Sign Up</a><br>
+                <a href="{{ url_for('main.reset_password') }}">Forget Password?</a>
             </div>
         </form>
     </div>
