--- a/app/templates/user/register.html
+++ b/app/templates/user/register.html
@@ -59,7 +59,7 @@
                 {{ form.submit(class="btn btn-primary btn-lg btn-block") }}
             </div>
             <div class="mb-3">
-                <a href="{{ url_for('login') }}">Already have a account?</a>
+                <a href="{{ url_for('main.login') }}">Already have a account?</a>
             </div>
         </form>
     </div>
