--- a/app/static/style/sidebar.css
+++ b/app/static/style/sidebar.css
@@ -41,9 +41,10 @@ body {
     min-width: 70px;
     z-index: 1000;
     transition: all .25s ease-in-out;
-    background-color: #dedede;
+    background-color: #f0f0f5;
     display: flex;
     flex-direction: column;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
 #sidebar.expand {
