--- a/app/templates/navbar/navbar.html
+++ b/app/templates/navbar/navbar.html
@@ -59,10 +59,10 @@
                 {% else %}
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="btn btn-outline-success me-lg-2 mb-2 mb-lg-0 d-block d-lg-inline-block w-100 w-lg-auto text-center" href="login">Log In</a>
+                            <a class="btn btn-outline-primary me-lg-2 mb-2 mb-lg-0 d-block d-lg-inline-block w-100 w-lg-auto text-center" href="login">Log In</a>
                         </li>
                         <li class="nav-item">
-                            <a class="btn btn-outline-success ms-lg-2 d-block d-lg-inline-block w-100 w-lg-auto text-center" href="register">Sign Up</a>
+                            <a class="btn btn-outline-primary ms-lg-2 d-block d-lg-inline-block w-100 w-lg-auto text-center" href="register">Sign Up</a>
                         </li>
                     </ul>
                 {% endif %}
