--- a/app/templates/aboutus.html
+++ b/app/templates/aboutus.html
@@ -62,7 +62,7 @@
             <p>If you encounter any problems or have any questions, you can reach out to us through the following ways, and we will assist you as soon as possible. Our dedicated support team is here to help ensure you have a smooth experience on our platform. Whether you need technical assistance, have feedback, or require additional information, don't hesitate to contact us. We are committed to providing prompt and effective support to address your needs and enhance your user experience.</p>
           </div>
           <div class="email-button-container">
-              <button class="email-button" onclick="copyEmail()"><i class="fas fa-envelope"></i> surveystream10@gmail.com</button>
+              <button class="email-button" onclick="copyEmail()"><i class="fas fa-envelope"></i> Email Us!</button>
           </div>
         </div>
       </div>
