--- a/app/templates/user/base_user.html
+++ b/app/templates/user/base_user.html
@@ -11,9 +11,7 @@
     <!-- Navbar section -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container-fluid">
-            <!-- Navbar brand with logo and site name -->
-            <a class="navbar-brand" href="index"><img src="../../static/img/logo.png" alt="" width="30" height="30" class="d-inline-block align-text-top me-2">Survay Stream</a>
-            <!-- Navbar toggler for mobile view -->
+            <a class="navbar-brand" href="index"><img src="../../static/img/logo.png" alt="" width="30" height="30" class="d-inline-block align-text-top me-2">Survey Stream</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
