--- a/app/templates/aboutus.html
+++ b/app/templates/aboutus.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Us</title>
+{% extends 'navbar/navbar.html' %}
+
+{% set exclude_bootstrap = True %}
+
+{% block extra_css %}
   <link rel="stylesheet" href="../static/style/aboutus.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-  
-<body>
+{% endblock %}
+
+{% set visible=True %}
+
+{% block content %}
     <!-- What We Do Section-->
 <section class="section-padding">
     <div class="container">
@@ -71,8 +71,8 @@
         </div>
       </div>
     </section>
+{% endblock %}
 
-<script src="../static/js/aboutus.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-</html>
+{% block extra_js %}
+<script src="{{ url_for('static', filename='js/aboutus.js') }}"></script>
+{% endblock %}
