--- a/app/templates/survey/create_survey.html
+++ b/app/templates/survey/create_survey.html
@@ -22,7 +22,7 @@
                     </div>
                     <div id="questionsContainer"></div>
                     <button class="btn btn-outline-success mt-3" type="button" onclick="addQuestion()">Add Question</button>
-                    <p class="mt-3">{{ form.submit(class="btn btn-outline-primary") }}</p>
+                    <p class="mt-3 btn-primary d-flex justify-content-end ">{{ form.submit(class="btn btn-outline-primary") }}</p>
                 </form>
             </div>
         </div>
