--- a/app/templates/survey/take_survey.html
+++ b/app/templates/survey/take_survey.html
@@ -9,9 +9,6 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <style>
-    body {
-        background-color: #27b26f; 
-    }
     .container {
         background: #fff;
         padding: 2rem;
@@ -22,7 +19,7 @@
     }
     h1 {
         font-family: 'Arial', sans-serif;
-        color: #1c7634; 
+        color:#4783c7;; 
         text-align: center; 
     }
     p {
@@ -42,7 +39,7 @@
         font-weight: 400;
     }
     .btn-primary {
-        background-color: #1f8a43;
+        background-color: #3e83d1;
         color: white;
         padding: 15px 30px;
         border: none;
@@ -52,7 +49,7 @@
         margin-top: 40px;
     }
     .btn-primary:hover {
-        background-color: #155c2f;
+        background-color: #125baf;
     }
     .submit-botton{
         justify-content: center;
