--- a/app/templates/survey/update_profile.html
+++ b/app/templates/survey/update_profile.html
@@ -1,47 +1,12 @@
 {% extends 'navbar/navSidebar.html' %}
 {% block title %} My Profile {% endblock %}
 {% block content %}
-<style>
-    body, html {
-        height: 100%;
-        margin: 0;
-        font-family: Arial, Helvetica, neue, sans-serif;
-    }
-    .container {
-        background-color: #f8f9fa;
-        border-radius: 10px;
-        box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-        text-align: center;
-        padding: 20px;
-        transition: margin-left 0.3s;
-        width: calc(100% - 280px); 
-    }
-    @media (max-width: 768px) {
-            .sidebar {
-                width: 100%; 
-                height: auto; 
-                position: relative;
-            }
 
-            .container {
-                margin-left: 0; 
-                width: 100%;
-            }
-    }
-    .profileimg {
-        width: 150px;  
-        height: 150px; 
-        object-fit: cover; 
-        border-radius: 50%;
-        border: 2px solid #dee2e6;
-    }
-    .form-label{
-        margin-top: 10px;
-        margin-bottom: 10px;
-        font-weight: bold;
-    }
 
-</style>
+{% block extra_css%}
+<link rel="stylesheet" href="../../static/style/update_profile.css">
+{% endblock %}
+
 <body>
     <div class="container mt-5 d-flex justify-content-center align-items-center">
         <form method="POST" action="" enctype="multipart/form-data" class="profile-form">
@@ -59,13 +24,11 @@
                     {% endif %}
                     {{ form.username.label(class="form-label") }}
                     {{ form.username(class="form-control") }}
-                    <!-- waiting for be changed by tony -->
                     <label for="email" class="form-label"><strong>Email</strong></label>
                     <input type="email" class="form-control readonly-input" id="email" placeholder="{{ current_user.email }}" readonly>
                     <label for="points" class="form-label"><strong>Points</strong></label>
                     <input type="text" class="form-control readonly-input" id="points" placeholder="{{ current_user.point }}" readonly>
-                    <!-- end of coding be changed by tony  -->
-                    {{ form.submit(class="btn btn-success mt-3") }}
+                    {{ form.submit(class="btn btn-primary mt-3") }}
             </div>
         </form>
     </div>
