--- a/app/templates/survey/take_survey.html
+++ b/app/templates/survey/take_survey.html
@@ -6,7 +6,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ survey.title }}</title>
-    <link rel="stylesheet" href="../../static/style/take_survey.css">
+    {% block extra_css %}
+  <link href="{{ url_for('static', filename = 'style/take_survey.css') }}" rel="stylesheet" >
+{% endblock %}
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
