--- a/app/templates/user/reset_password.html
+++ b/app/templates/user/reset_password.html
@@ -6,6 +6,8 @@
         <h3 class="mb-5">Forget Password</h3>
         <form method="POST" action="">
             {{ form.hidden_tag() }}
+
+            <!-- Email field -->
             <div class="mb-3">
                 {{ form.email.label(class="form-label") }}
                 {{ form.email(class="form-control") }}
@@ -15,6 +17,8 @@
                     </div>
                 {% endif %}
             </div>
+
+            <!-- Flash messages for general feedback -->
             <div class="mb-3">
                 {% with messages = get_flashed_messages(with_categories=true) %}
                 {% if messages %}
@@ -27,6 +31,8 @@
                 {% endif %}
                 {% endwith %}
             </div>
+            
+            <!-- Submit button -->
             <div class="mb-3">
                 {{ form.submit(class="btn btn-primary btn-lg btn-block") }}
             </div>
