--- a/app/templates/survey/update_profile.html
+++ b/app/templates/survey/update_profile.html
@@ -7,6 +7,7 @@
 
 <body>
     <div class="container mt-5 d-flex justify-content-center align-items-center">
+        <!-- Form for updating the user profile, uses POST method and supports file upload -->
         <form method="POST" action="" enctype="multipart/form-data" class="profile-form">
             {{ form.hidden_tag() }}
             <div class="col-md-16">
@@ -15,17 +16,22 @@
             <div class="col-md-16">
                     {{ form.profile_pic.label(class="form-label") }}<br>
                     {{ form.profile_pic(class="form-control") }}<br>
+                    <!-- Display errors related to profile picture upload -->
                     {% if form.profile_pic.errors %}
                         {% for error in form.profile_pic.errors %}
                             <span style="color: red;">{{ error }}</span>
                         {% endfor %}
                     {% endif %}
+                    <!-- Label and input for username -->
                     {{ form.username.label(class="form-label") }}
                     {{ form.username(class="form-control") }}
+                    <!-- Read-only input for displaying email  -->
                     <label for="email" class="form-label"><strong>Email</strong></label>
                     <input type="email" class="form-control readonly-input" id="email" placeholder="{{ current_user.email }}" readonly>
+                    <!-- Read-only input for displaying points -->
                     <label for="points" class="form-label"><strong>Points</strong></label>
                     <input type="text" class="form-control readonly-input" id="points" placeholder="{{ current_user.point }}" readonly>
+                    <!-- Submit button for the form -->
                     {{ form.submit(class="btn btn-primary mt-3") }}
             </div>
         </form>
