--- a/app/templates/user/change_password.html
+++ b/app/templates/user/change_password.html
@@ -6,6 +6,8 @@
         <h3 class="mb-5">Change Password</h3>
         <form method="POST" action="">
             {{ form.hidden_tag() }}
+
+            <!-- Current password input field -->
             <div class="mb-3">
                 {{ form.current_password.label(class="form-label") }}
                 {{ form.current_password(class="form-control") }}
@@ -15,6 +17,8 @@
                     </div>
                 {% endif %}
             </div>
+
+            <!-- New password input field -->
             <div class="mb-3">
                 {{ form.new_password.label(class="form-label") }}
                 {{ form.new_password(class="form-control") }}
@@ -24,6 +28,8 @@
                     </div>
                 {% endif %}
             </div>
+
+            <!-- Confirm new password input field -->
             <div class="mb-3">
                 {{ form.confirm_new_password.label(class="form-label") }}
                 {{ form.confirm_new_password(class="form-control") }}
@@ -33,6 +39,8 @@
                     </div>
                 {% endif %}
             </div>
+
+            <!-- Submit button for the form -->
             <div class="mb-3">
                 {{ form.submit(class="btn btn-primary btn-lg btn-block") }}
             </div>
