--- a/app/templates/navbar/navSidebar.html
+++ b/app/templates/navbar/navSidebar.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Meta tags for character set and responsive design -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Title block for dynamic title rendering -->
     <title>{% block title %}Survey Steam{% endblock %}</title>
+
+    <!-- External CSS for icons and Bootstrap framework -->
     <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -15,15 +19,20 @@
 
 <body>
     <div class="wrapper">
+        <!-- Sidebar section  -->
         <aside id="sidebar">
             <div class="d-flex">
+                <!-- Toggle button for collapsing sidebar -->
                 <button class="toggle-btn" type="button">
                     <i class="lni lni-grid-alt"></i>
                 </button>
+
+                <!-- Sidebar logo -->
                 <div class="sidebar-logo">
                     <a href="{{ url_for('main.index') }}">Survey Stream</a>
                 </div>
             </div>
+            <!-- Navigation links in the sidebar -->
             <ul class="sidebar-nav">
                 <li class="sidebar-item">
                     <a href="{{url_for('main.update_profile', user_id=current_user.id)}}" class="sidebar-link">
@@ -50,6 +59,7 @@
                     </a>
                 </li>
             </ul>
+            <!-- Sidebar footer with logout link -->
             <div class="sidebar-footer">
                 <a href="{{url_for('main.logout')}}" class="sidebar-link">
                     <i class="lni lni-exit"></i>
@@ -57,10 +67,11 @@
                 </a>
             </div>
         </aside>
-
+        <!-- Main content area -->
         <div class="main p-3">
             <div class="container">
                 <div class="mb-3">
+                    <!-- Flash messages for user feedback -->
                     {% with messages = get_flashed_messages(with_categories=true) %}
                     {% if messages %}
                     {% for category, message in messages %}
@@ -72,6 +83,7 @@
                     {% endif %}
                     {% endwith %}
                 </div>
+                <!-- Content block for dynamic content rendering -->
                 {% block content %}{% endblock %}
             </div>
         </div>
