--- a/app/templates/user/base_user.html
+++ b/app/templates/user/base_user.html
@@ -8,17 +8,23 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <header>
+    <!-- Navbar section -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container-fluid">
+            <!-- Navbar brand with logo and site name -->
             <a class="navbar-brand" href="index"><img src="../../static/img/logo.png" alt="" width="30" height="30" class="d-inline-block align-text-top me-2">Survay Stream</a>
+            <!-- Navbar toggler for mobile view -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+            <!-- Collapsible section containing the navbar links -->
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto">
+                    <!-- Login button -->
                     <li class="nav-item">
                         <a class="btn btn-outline-primary me-lg-2 mb-2 mb-lg-0 d-block d-lg-inline-block w-100 w-lg-auto text-center" href="login">Log In</a>
                     </li>
+                    <!-- Sign up button -->
                     <li class="nav-item">
                         <a class="btn btn-outline-primary ms-lg-2 d-block d-lg-inline-block w-100 w-lg-auto text-center" href="register">Sign Up</a>
                     </li>
@@ -30,6 +36,7 @@
 
 
 <body>
+    <!-- Full-height section for the signup/login content -->
     <section class="vh-100">
         <div class="container py-5 h-100">
             <div class="row d-flex justify-content-center align-items-center h-100">
