--- a/app/templates/survey/create_survey.html
+++ b/app/templates/survey/create_survey.html
@@ -5,11 +5,14 @@
 <script src="{{ url_for('static', filename='js/create_survey.js') }}"></script>
 {% endblock %}
 {% block content %}
+<!-- Main content of the page -->
 <div class="container mt-4">
+    <!-- Content container with top margin -->
     <div class="card">
         <div class="card-body">
             <h2>Create a New Survey</h2>
             <form method="POST" action="{{ url_for('main.create_survey') }}" id="survey-form">
+                <!-- Form to create a new survey -->
                 {{ form.hidden_tag() }}
                 <div class="mb-3">
                     {{ form.title.label(class="form-label") }}
@@ -24,7 +27,9 @@
                     {{ form.description(class="form-control") }}
                 </div>
                 <div id="questionsContainer"></div>
+                <!-- Button to add a new question -->
                 <button class="btn btn-outline-success mt-3" type="button" onclick="addQuestion()">Add Question</button>
+                <!-- Submit button for the form -->
                 <p class="mt-3 d-flex justify-content-end">{{ form.submit(class="btn btn-outline-primary") }}</p>
             </form>
         </div>
